--- a/Sites/karakat/css/media1300.css
+++ b/Sites/karakat/css/media1300.css
@@ -3,4 +3,20 @@
     .header_back {
         background-size: cover;
     }
+
+    .header_left_city {
+        font-size: 14px;
+    }
+
+    .header_right_span_time {
+        font-size: 14px;
+    }
+
+    .header_right_tel {
+        font-size: 22px;
+    }
+
+    .nav_list {
+        font-size: 18px;
+    }
 }
