--- a/Sites/karakat/css/media550.css
+++ b/Sites/karakat/css/media550.css
@@ -4,6 +4,10 @@
       font-size: 16px;
     }
 
+    p {
+      font-size: 14px;
+    }
+
     .header_link_tel {
       font-size: 16px;
     }
@@ -65,6 +69,14 @@
       border-bottom: 2px solid #F2F8F8;
     }
 
+    .characteristics_content_foto img{
+      height: 200px;
+    }
+
+    .characteristics_content_foto2 img{
+      height: 200px;
+    }
+
     .section_advantage_item_image img {
       width: 60px;
       height: 60px;
@@ -81,13 +93,5 @@
       font-size: 14px;
       min-width: 160px;
       padding-top: 15px;
-    }
-
-    .footer_content_domen {
-      background-size: 18px;
-    }
-    
-    .footer_content_tel {
-      background-size: 18px;
     }
   }
