--- a/Sites/karakat/css/style.css
+++ b/Sites/karakat/css/style.css
@@ -34,31 +34,14 @@
     font-style: normal;
   }
 
+  p {
+    margin: 0;
+  }
+
   h2 {
+    margin: 0;
     padding-left: 30px;
     color:#ffdf00;
-  }
-
-  .section_characteristics_table {
-    width: 60%;
-    table-layout: fixed;
-    text-align: center;
-    border-collapse: collapse;
-
-  }
-
-  .section_characteristics_table th {
-    font-weight: bold;
-    padding: 5px;
-    background: #F2F8F8;
-    border: none;
-    border-bottom: 5px solid #F2F8F8;
-  }
-
-  .section_characteristics_table td {
-	padding: 5px;
-	border: none;
-	border-bottom: 5px solid #F2F8F8;
   }
 
   body {
@@ -146,7 +129,7 @@
 
   .header_left_city {
     display: flex;
-    font-size: 12px;
+    font-size: 16px;
     margin-right: 20px;
   }
 
@@ -156,7 +139,7 @@
   }
 
   .header_right_span_time {
-    font-size: 12px;
+    font-size: 16px;
   }
 
   .header_right_span_time:hover {
@@ -179,7 +162,7 @@
   .header_right_tel {
     display: flex;
     text-align: center;
-    font-size: 20px;
+    font-size: 24px;
     margin-right: 30px;
     font-weight: bolder;
     padding-left: 30px;
@@ -208,7 +191,7 @@
   .nav_list {
     display: flex;
     flex-wrap: wrap;
-    font-size: 18px;
+    font-size: 22px;
     justify-content: space-evenly;
   }
 
@@ -342,7 +325,75 @@
     line-height: 1.3;
   }
 
+  /*section characteristics*/
+
+  .section_assortment_title {
+    display: flex;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    justify-content: center;
+  }
+
+   .section_characteristics_table {
+    width: 60%;
+    table-layout: fixed;
+    text-align: center;
+    border-collapse: collapse;
+
+  }
+
+  .section_characteristics_table th {
+    font-weight: bold;
+    padding: 5px;
+    background: #F2F8F8;
+    border: none;
+    border-bottom: 5px solid #F2F8F8;
+  }
+
+  .section_characteristics_table td {
+	padding: 5px;
+	border: none;
+	border-bottom: 5px solid #F2F8F8;
+  }
+
+  .section_characteristics_content {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    margin-bottom: 50px;
+  }
+
+
+  .characteristics_content_foto img{
+    height: 350px;
+    -webkit-transform: scaleX(-1);
+    transform: scaleX(-1);
+  }
+
+  .characteristics_content_foto2 img{
+    height: 350px;
+  }
+
+  .characteristics_text {
+    display: flex;
+    margin-left: 40px;
+    margin-right: 40px;
+    text-align: justify;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 1.5;
+    flex: 75%;
+  }
+
+
   /*section advantage*/
+
+  .section_advantage_title {
+    margin-top: 30px;
+    margin-bottom: 30px;
+    display: flex;
+    justify-content: center;
+  }
 
   .section_advantage {
     border-top: 1px solid #000;
@@ -374,7 +425,6 @@
     height: 200px;
     border-radius: 15px;
     background-color: #F2F8F8;
-    margin-right: 20px;
   }
 
   .section_advantage_item_text {
@@ -385,6 +435,18 @@
   }
 
   /*Gallery*/
+
+  .section_gallery_title {
+    display: flex;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    justify-content: center;
+  }
+
+  .section_gallery {
+    border-top: 1px solid #000;
+    margin-top: 50px;
+  }
 
   .section_gallery_list {
     max-width: max-content;
