--- a/Sites/karakat/css/media820.css
+++ b/Sites/karakat/css/media820.css
@@ -13,7 +13,11 @@
         font-size: 12px;
     }
 
-    .header_right_tel {
+    .header_right_telegram {
+        margin-top: 30px;
+      }
+
+    .header_link_tel {
         font-size: 20px;
     }
 
@@ -24,6 +28,11 @@
     .construction_trigger {
         margin-top: 100px;
     }
+
+    .characteristics_text {
+        margin-left: 100px;
+        margin-right: 100px;
+      }
 
     .footer_content {
         min-height: 60px;
