--- a/Sites/karakat/css/style.css
+++ b/Sites/karakat/css/style.css
@@ -162,11 +162,27 @@
   .header_right_tel {
     display: flex;
     text-align: center;
-    font-size: 24px;
+    flex-direction: column;
     margin-right: 30px;
-    font-weight: bolder;
+  }
+
+  .header_link_tel {
     padding-left: 30px;
+    font-weight: bolder;
+    font-size: 24px;
     background-image: url(../image/tel.svg);
+    background-size: 20px 20px;
+    background-repeat: no-repeat;
+    background-position: left top;
+  }
+
+  .header_right_telegram {
+    position: absolute;
+    margin-top: 40px;
+    width: 20px;
+    height: 20px;
+    font-size: 24px;
+    background-image: url(../image/telegram.svg);
     background-size: 20px 20px;
     background-repeat: no-repeat;
     background-position: left center;
@@ -249,6 +265,7 @@
 
   .popup {
     position: fixed;
+    z-index: 3;
     width: 100%;
     height: 100%;
     background-color: rgba(80, 80, 80, 0.8);
@@ -376,15 +393,16 @@
 
   .characteristics_text {
     display: flex;
-    margin-left: 40px;
-    margin-right: 40px;
+    text-indent: 2.5em;
+    margin-left: 200px;
+    margin-right: 200px;
+    margin-bottom: 50px;
     text-align: justify;
     font-size: 18px;
     font-weight: 400;
     line-height: 1.5;
     flex: 75%;
   }
-
 
   /*section advantage*/
 
@@ -397,7 +415,6 @@
 
   .section_advantage {
     border-top: 1px solid #000;
-    margin-top: 50px;
   }
 
   .section_advantage_item_image img{
@@ -421,6 +438,7 @@
 
   .section_advantage_item {
     display: inline-block;
+    margin-bottom: 20px;
     width: 240px;
     height: 200px;
     border-radius: 15px;
